Added logo to top of page.

--- a/src/css/_default.scss
+++ b/src/css/_default.scss
@@ -11,8 +11,8 @@ body{
         display:flex;
         justify-content: space-between;
         align-items: center;
-        img {
-
+        .logo {
+            position: relative;
         }
         .shop {
 
