--- a/src/css/_default.scss
+++ b/src/css/_default.scss
@@ -24,6 +24,7 @@ body{
         justify-content: center;
         align-items: center;
         .banner {
+            position:relative;
             width: 300px;
             height: 600px;
             background-color: #FFFFFF;
