--- a/src/css/_default.scss
+++ b/src/css/_default.scss
@@ -15,7 +15,27 @@ body{
             position: relative;
         }
         .shop {
+            font-weight: bold;
+            width: 100px;
+            cursor: pointer;
+            .shop-arrow {
+                position: relative;
+                width: 8px;
+                height: 12px;
+                margin-left: 7px;
+            }
+        }
+        .shop:hover {
+            animation: shopOver .25s;
+        }
+        @keyframes shopOver {
+            0% {
+                margin-right: 0px;
+            }
 
+            100% {
+                margin-right: 10px;
+            }
         }
     }
     .banner-wrapper {
