Applied fixes with kirk

--- a/src/css/_default.scss
+++ b/src/css/_default.scss
@@ -5,6 +5,7 @@ body{
     min-height:100vh;
     display:flex;
     flex-direction: column;
+    background-color: #000;
     .header {
         background:#fff;
         padding:12px 30px;
